[gd_scene load_steps=5 format=3 uid="uid://c0gd2d2fiofke"]

[ext_resource type="Script" uid="uid://dm4ye2e5erulu" path="res://scenes/level_select_menu.gd" id="1_isecu"]
[ext_resource type="FontFile" uid="uid://dy7j2ne7keqhn" path="res://fonts/m5x7.ttf" id="1_wyt36"]
[ext_resource type="PackedScene" uid="uid://balbsvsrb5duq" path="res://effects/background.tscn" id="2_cxc3u"]
[ext_resource type="Texture2D" uid="uid://u7q4qa1ndsm1" path="res://sprites/lock.png" id="4_jq82j"]

[node name="LevelSelectMenu" type="Node2D"]
script = ExtResource("1_isecu")

[node name="SpaceBackground" parent="." instance=ExtResource("2_cxc3u")]
visible = false

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 153.0
offset_top = 126.0
offset_right = 216.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8, 8)
theme_override_fonts/font = ExtResource("1_wyt36")
text = "Level Select"

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 169.0
offset_top = 327.0
offset_right = 619.0
offset_bottom = 437.0

[node name="Button2" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 169.0
offset_top = 532.0
offset_right = 619.0
offset_bottom = 642.0

[node name="Button3" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 172.0
offset_top = 750.0
offset_right = 622.0
offset_bottom = 860.0

[node name="level1" type="Label" parent="."]
offset_left = 317.0
offset_top = 276.0
offset_right = 358.0
offset_bottom = 289.0
scale = Vector2(4, 4)
theme_override_fonts/font = ExtResource("1_wyt36")
text = "LEVEL 1"

[node name="level2" type="Label" parent="."]
offset_left = 314.0
offset_top = 479.0
offset_right = 355.0
offset_bottom = 492.0
scale = Vector2(4, 4)
theme_override_fonts/font = ExtResource("1_wyt36")
text = "LEVEL 2"

[node name="level3" type="Label" parent="."]
offset_left = 315.0
offset_top = 698.0
offset_right = 356.0
offset_bottom = 711.0
scale = Vector2(4, 4)
theme_override_fonts/font = ExtResource("1_wyt36")
text = "LEVEL 3"

[node name="Lv1_complete" type="ColorRect" parent="."]
offset_left = 171.0
offset_top = 329.0
offset_right = 618.0
offset_bottom = 437.0
color = Color(0.1705, 0.93, 0, 1)

[node name="lv2_complete" type="ColorRect" parent="."]
offset_left = 173.0
offset_top = 534.0
offset_right = 619.0
offset_bottom = 641.0
color = Color(0.168627, 0.929412, 0, 1)

[node name="lv3_complete" type="ColorRect" parent="."]
offset_left = 176.0
offset_top = 752.0
offset_right = 622.0
offset_bottom = 859.0
color = Color(0.168627, 0.929412, 0, 1)

[node name="Lv1_lock" type="ColorRect" parent="."]
offset_left = 170.0
offset_top = 328.0
offset_right = 617.0
offset_bottom = 436.0
color = Color(1, 0, 0, 1)

[node name="lv2_lock" type="ColorRect" parent="."]
offset_left = 172.0
offset_top = 533.0
offset_right = 618.0
offset_bottom = 640.0
color = Color(1, 0, 0, 1)

[node name="lv3_lock" type="ColorRect" parent="."]
offset_left = 175.0
offset_top = 751.0
offset_right = 621.0
offset_bottom = 858.0
color = Color(1, 0, 0, 1)

[node name="Lock1" type="Sprite2D" parent="."]
position = Vector2(394, 584)
scale = Vector2(0.210094, 0.210094)
texture = ExtResource("4_jq82j")

[node name="Lock2" type="Sprite2D" parent="."]
position = Vector2(393, 805)
scale = Vector2(0.210094, 0.210094)
texture = ExtResource("4_jq82j")
